<?xml version="1.0"?>
<package format="2">
  <name>see_core</name>
  <version>1.0.0</version>
  <description>SEE Core</description>

  <maintainer email="rborder@robots.ox.ac.uk">Rowan Border</maintainer>
  <license>MIT Licence</license>
  <url type="website">https://github.com/robotic-esp/see-public</url>
  <author email="rborder@robots.ox.ac.uk">Rowan Border</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>see_common</build_depend>
  <build_export_depend>see_common</build_export_depend>
  <exec_depend>see_common</exec_depend>

  <build_depend>eigen_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>

</package>
